--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
 <title>
 The Rock,Paper and Scissor Game
 </title>
+<link href="game.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>Rock, Paper, Scissors</h1>
