--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
         </title>
         <link href="https://fonts.googleapis.com/css?family=Modak" rel="stylesheet">
         <link href="game.css" rel="stylesheet" type="text/css">
-        <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+        <script src="jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
