--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Rock, Paper, Scissors
+            Rock Paper Scissors
         </title>
         <link href="https://fonts.googleapis.com/css?family=Modak" rel="stylesheet">
         <link href="game.css" rel="stylesheet" type="text/css">
