Added more inventory

--- a/public/game.html
+++ b/public/game.html
@@ -10,7 +10,11 @@
         <link href="game.css" rel="stylesheet" type="text/css">
         <script src="jquery-3.2.1.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="/js/generalScript.js"></script>
+        <script type="text/javascript" src="/js/itemScript.js"></script>
+        <script type="text/javascript" src="/js/environmentScript.js"></script>
+        <script type="text/javascript" src="/js/playerScript.js"></script>
+        <script type="text/javascript" src="/js/glueScript.js"></script>
     </head>
     <body>
     	<canvas id=gameCanvas></canvas>
