--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <title>
 The Rock,Paper and Scissor Game
 </title>
-<link href="game.css" rel="stylesheet" type="text/css">
+<link href="index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>Rock, Paper, Scissors</h1>
 <div class="game">
-<script src="game.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
